--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,15 +26,15 @@
         android:id="@+id/textView"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="48dp"
         android:gravity="left"
         android:text="Book"
         android:textSize="32dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.434"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.93" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -57,6 +57,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="36dp"
         android:gravity="right"
+        android:visibility="invisible"
         android:text="Star"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,6 +81,7 @@
         android:layout_height="39dp"
         android:layout_marginTop="32dp"
         android:gravity="right"
+        android:visibility="invisible"
         android:text="XXXX"
         android:textSize="24dp"
         android:layout_marginEnd="36dp"
@@ -108,6 +110,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="36dp"
         android:gravity="right"
+        android:visibility="invisible"
         android:text="dogs"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +137,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="36dp"
         android:gravity="right"
+        android:visibility="invisible"
         android:text="XOXX"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,6 +164,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="36dp"
         android:gravity="right"
+        android:visibility="invisible"
         android:text="most"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -188,6 +193,7 @@
         android:gravity="right"
         android:text="XOXX"
         android:textSize="24dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
