--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="228dp"
-            android:layout_height="45dp"
-            android:hint="Enter 4 letter guess here" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
-            android:layout_marginBottom="28dp" app:layout_constraintEnd_toStartOf="@+id/button"
-            app:layout_constraintHorizontal_bias="0.428" android:id="@+id/textInputEditText"/>
+
+    <EditText
+        android:id="@+id/et_simple"
+        android:layout_width="228dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="28dp"
+        android:hint="Enter 4 letter guess here"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintHorizontal_bias="0.708"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
             android:text="GUESS!"
             android:layout_width="wrap_content"
@@ -26,14 +31,14 @@
         android:id="@+id/textView"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="28dp"
         android:gravity="left"
         android:text="Book"
         android:textSize="32dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -200,4 +205,15 @@
         app:layout_constraintStart_toEndOf="@+id/textView12"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:layout_constraintVertical_bias="0.035" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="237dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="44dp"
+        android:visibility="gone"
+        android:text="Reset"
+        app:layout_constraintBottom_toTopOf="@+id/et_simple"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
